--- a/app/globals.css
+++ b/app/globals.css
@@ -129,22 +129,22 @@ body {
 }
 .spinner {
   position: relative;
-  width: 15.7px;
-  height: 15.7px;
 }
 
 .spinner div {
-  width: 100%;
-  height: 100%;
+  width: 15.7px;
+  height: 15.7px;
+  /* width: 100%;
+  height: 100%; */
   margin-top: 15px;
-  background-color: rgba(251, 252, 252, 0.82);
+  background-color: rgba(9, 10, 10, 0.82);
   border-radius: 50%;
   animation: spinner-4t3wzl 1.25s infinite backwards;
 }
 
 .spinner div:nth-child(1) {
   animation-delay: 0.15s;
-  background-color: rgba(246, 248, 248, 0.9);
+  background-color: rgba(14, 15, 15, 0.9);
 }
 
 .spinner div:nth-child(2) {
@@ -153,17 +153,17 @@ body {
 
 .spinner div:nth-child(3) {
   animation-delay: 0.45s;
-  background-color: rgba(244, 248, 247, 0.8);
+  background-color: rgba(5, 6, 6, 0.8);
 }
 
 .spinner div:nth-child(4) {
   animation-delay: 0.6s;
-  background-color: rgba(244, 248, 247, 0.8);
+  background-color: rgba(20, 21, 21, 0.8);
 }
 
 .spinner div:nth-child(5) {
   animation-delay: 0.75s;
-  background-color: rgba(244, 248, 247, 0.8);
+  background-color: rgba(9, 9, 9, 0.8);
 }
 
 @keyframes spinner-4t3wzl {
